Добавляет последние тексты для правил

--- a/app/templates/partials/js/js-rules.hbs
+++ b/app/templates/partials/js/js-rules.hbs
@@ -201,7 +201,7 @@ var foo = "Copyright \u00A9";   // unicode
 
 ## Условные операторы
 'yoda': ['error', "never"]
-- Запрещена "проверка Йоды" — в условных операторах в блоке условия при сравнении переменной или свойства со значением сначала идет переменная или свойство объекта и только потом значения не наоброт.
+- Запрещена "проверка Йоды" — в условных операторах в блоке условия при сравнении переменной или свойства со значением сначала идет переменная или свойство объекта и только потом значения, а не наоброт.
 
 ```javascript
 if (1 === myValue) {} // Плохо
@@ -338,11 +338,25 @@ function myFunc() {}; // Плохо
 
 ## Приведение типов
 'no-extra-boolean-cast': 'error',
-'valid-typeof': 'error', // проверка на правильный тип в typeof
-'radix': 'error',
+- Не используется лишнее приведение к Boolean. Например, нет большого смысла переводить в boolean условия в конструкциях `if`, `while`, `for`, в первом операнде тернарного оператора
 
-### Зафиксированный if (if..true)
-'no-constant-condition': 'error',
+'valid-typeof': 'error',
+- Оператор `typeof` используется корректно — используются только правильные значения, возвращаемые оператором, не производится сравнения со строковыми литералами, которые содержат некорректные значения `typeof`
+
+'radix': 'error'
+- В `parseInt` обязательно передается второй параметр — основание системы счисления, даже в случае с десятичной системой счисления
+
+### Константы в условиях
+'no-constant-condition': 'error'
+- В блоки условия операторов if, while, for и тернарного оператора не передается константное значение, которое подразумевает, что условие выполняется (или не выполняется) всегда
+```diff
+- if (true) {}
++ if (a > 1) {}
+```
+```diff
+- var ternaryValue = true ? 'a' : 'b';
++ var ternaryValue = isA() ? 'a' : 'b';
+```
 
 # Модульность и области видимости
 ## Глобальная область видимости
@@ -351,21 +365,50 @@ function myFunc() {}; // Плохо
 # Чистый код
 ## Лишние символы (пробелы, точки с запятой и прочее)
 'no-extra-semi': 'error',
+- Не используются лишние (множественные) точки с запятой
 
 ## Отладчик и консоль
 'no-console': 'error',
+- В коде не используется оставленных выводов в консоль
+
 'no-debugger': 'error',
+- В коде нет забытых инструкций debugger
 
 ## Неиспользуемый код
 'no-unreachable': 'error',
-'no-unused-vars': ['error', {args: 'none'}], // eslint:recommended
+- В проекте нет недоступного кода, который никогда не выполнится
+```diff
+- if (false) {
+-   doSomething();
+- }
++ if (needToDoSomething()) {
++   doSomething();
++ }
+```
+
+'no-unused-vars': ['error', {args: 'none'}]
+- В коде нет объявленных, но неиспользуемых переменных. Проверка не относится к параметрам функций.
+
 'no-unused-expressions': 'error',
+- В коде нет выражений, значения которых не записываются в переменные, параметры функций, свойства объектов и не передаются как параметры функций
+```diff
+- check === true && doSomething();
++ if (check) {
++   doSomething();
++ }
+```
 
 ## Обработка ошибок и исключения
-'no-throw-literal': 'error', // eslint:recommended // запрет на выброс исключениями не объектов Error а литералов
+'no-throw-literal': 'error',
+- Для выбрасывания исключения в оператор `throw` передаются только объекты Error. Передавать литералы запрещено.
+```diff
+- throw 'Passed value is out of range';
++ throw new RangeError('Rassed value is out of range');
+```
 
 ### try..catch с пустым try
 'no-ex-assign': 'error'
+- В конструкции `try..catch` запрещен пустой блок `try`
 
 # Документирование
 'valid-jsdoc': ['error', {
@@ -374,21 +417,71 @@ function myFunc() {}; // Плохо
     requireReturn: false,
     prefer: {returns: 'return'}
 }],
+При написании jsDoc используются следующие ограничения:
+- необязательно добавлять текстовое описание конструкциям @return и @param, достаточно просто указания типа и названия параметра для @param
+- описание возвращаемного типа @return требуется только в том случае, если функция возвращает какое-то значение. Правило не действует для конструкторов, для них указывать @return необязательно. Также необязательно указывать тег @return для функций, в которых конструкуия `return` используется без возвращаемого значения для выхода из функции
+- для описания возвращаемого значения из функции используется тег @return, а не @returns
 
 # Прочее
-'guard-for-in': 'error', // Итерирование по объектам через hasOwnProp
-'no-caller': 'error', // запрет на использование caller/callee в функциях
-'no-iterator': 'error', // запрет на использование __iterator__
-'no-proto': 'error', // запрет на использование __proto__
+'guard-for-in': 'error'
+- При итерировании по объектам через `for..in` при работе со свойствами используется конструкция `hasOwnProperty`
+
+'no-caller': 'error',
+- В функциях не используются обращения к `caller` и `callee`
+
+'no-iterator': 'error',
+- В объектах напрямую не переопределяется свойство `__iterator__`
+
+'no-proto': 'error',
+- В объектах напрямую не переопределяется свойство `__proto__`. Разрешено переопределять `__proto__` через `Object.create` или запись в прототип, объектов, созданных другими конструкторами, но напрямую редактировать `__proto__` нельзя
+```diff
+- var obj = {
+-   __proto__: Parent
+- };
++
++ var Obj = function() {};
++ Obj.prototype = new Parent();
++ var obj = new obj;
++
++ var obj = Object.create(Parent.prototype);
+```
+
 'no-labels': 'error',
+- В коде не используются лейблы. Лейблы используются с конструкциями `break` и `continue` для направленного выхода из цикла и могут привести к слишком сложному для понимания коду
+
 'no-lone-blocks': 'error',
+- Блоки, использующиеся в коде должны описывать тело функции, условия, оператора `switch` и прочие конструкции относящиеся к группировке множественных операций. Блоки не должны использваться сами по себе, любой блок должен быть частью другого выражения.
+
 'no-sequences': 'error',
+- В коде не используется оператор «запятая» для описания последовательностей действий. Для создания переменных используются отдельные ключевые слова `let`, `const`, `var`, в операторы группировки, условные операторы и прочие конструкции. Исключение составляет начальное условие оператора `for`
+```diff
+- const result = (1, 2); // 2
++ const result = 2;
+
+- switch (val = getVal(), val) {}
++ val = getVal();
++ switch(val) {}
+
++ for (var i = 0, l = 100; i < l; i++);
+```
 
 ## Регулярные выражения
 'no-control-regex': 'error',
+- В регулярных выражениях не используются «управляющие выражения»
+
 'no-empty-character-class': 'error',
-'no-invalid-regexp': 'error', // нельзя создавать объект RegExp из неправильной строки
-'no-regex-spaces': 'error', // запрет на использование нескольких пробелов в регулярках. Вместо этого предлагается использовать {3}
+- В регулярных выражениях не используются пустые классы символов `[]` (блоки, ограниченные квадратными скобками)
+
+'no-invalid-regexp': 'error',
+- В коде регулярные выражения не создаются через конструктор RegExp из строки, которая не может быть разобрана как правильное регулярное выражение
+
+'no-regex-spaces': 'error',
+- В регулярных выражениях не используются нескольких последовательных пробелов. Вместо этого предлагается использовать модификаторы количества {3}
+```diff
+- /   /.exec(myString);
++ /\s{3}/.exec(myString);
+```
 
 # node.js
 'no-process-exit': 'error',
+- В node.js файлах не используется конструкция `process.exit`.
