Исправляет фактическую ошибку в объяснении правила

--- a/app/templates/partials/js/js-rules.hbs
+++ b/app/templates/partials/js/js-rules.hbs
@@ -249,7 +249,7 @@ if (myValue === 1) {} // Хорошо
 'no-var': 'error',
 - При объявлении переменных предпочтение отдается ключевым словам let и const. Переменные объявляются через var только при наличии проблем с поддержкой кода.
 
-'no-redeclare': 'error', //default
+'no-redeclare': 'error'
 - Запрещено переопределять с помощью ключевого слова ранее созданные переменные
 
 'one-var': ['error', {
@@ -262,10 +262,10 @@ if (myValue === 1) {} // Хорошо
 
 ### Объявление функций
 'no-func-assign': 'error',
-- Функции объявляются как функциональные выражения, а не определения функций.
-```javascript
-var myFunc = function() {}; // Хорошо
-function myFunc() {}; // Плохо
+- Запрещено переопределение функций, созданных с помощью функционального объявления (function expression)
+```diff
+- function myFunc() {};
+- myFunc = 2;
 ```
 
 'no-inner-declarations': ["error", "functions"],
