Добавляет черновое оформление кодгайда js

--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ header {
 
   background-color: #312785;
   background-image: repeating-linear-gradient(150deg, rgba(255, 255, 255, 0.06), rgba(255, 255, 255, 0.06) 1px, transparent 0, transparent 41px), repeating-linear-gradient(-150deg, rgba(255, 255, 255, 0.06), rgba(255, 255, 255, 0.06) 1px, transparent 0, transparent 41px);
+  background-size: 82px 47px;
 }
 
 header h1 {
