--- a/css/style.css
+++ b/css/style.css
@@ -135,11 +135,17 @@ header a:visited {
 
 .logo-list ul {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: space-around;
   margin: 0;
   padding: 0;
 
   list-style: none;
+}
+
+.logo-list li {
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .logo {
