--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
 html {
+  box-sizing: border-box;
+
   font-size: 16px;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
 }
 
 body {
@@ -13,12 +21,14 @@ body {
 
 a:link,
 a:visited {
-  color: #5a5a5a;
-  text-decoration: underline;
+  color: #3f3ccb;
+  text-decoration: none;
 }
 
-a:hover {
-  text-decoration: none;
+a:hover,
+a:focus {
+  color: #302683;
+  text-decoration: underline;
 }
 
 h1,
@@ -153,10 +163,66 @@ header a:visited {
   height: 300px;
 }
 
+.guide-content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+}
+
+.sidebar::before,
+.sidebar::after {
+  content: "";
+  display: table;
+}
+
+.sidebar a {
+  display: block;
+  color: #5a5a5a;
+}
+
+.sidebar a:hover {
+  color: #3f3ccb;
+}
+
+.sidebar-col {
+  padding: 2rem 1rem;
+}
+
+.sidebar-col + .sidebar-col {
+  border-top: 1px solid #e5e5e5;
+}
+
+.sidebar-col > a {
+  font-size: 1.75rem;
+  line-height: 1.25;
+}
+
+.sidebar-menu {
+  padding-left: 1rem;
+}
+
+.chapters {
+  width: 100%;
+}
+
 .chapter h2 {
   padding: 2rem 1rem;
-
+  word-break: break-word;
   background-color: #e5e5e5;
+}
+
+.chapter h3[id]::before {
+  display: block;
+  height: 2rem;
+  margin-top: -2rem;
+  visibility: hidden;
+  content: "";
 }
 
 .chapter-part {
@@ -273,6 +339,22 @@ footer {
 }
 
 @media (min-width: 48em) {
+  .sidebar {
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    padding: 2rem 0;
+  }
+
+  .sidebar-col {
+    width: 50%;
+    padding: 1rem 3rem;
+  }
+
+  .sidebar-col + .sidebar-col {
+    border-top: 0;
+  }
+
   .chapter h2 {
     padding: 2rem 3rem 2.5rem;
   }
@@ -292,6 +374,78 @@ footer {
 
   .chapter-part-col + .chapter-part-col {
     border-top: 0;
+  }
+}
+
+@media (min-width: 75em) {
+  .chapters {
+    width: calc(100% - 230px);
+  }
+
+  .sidebar {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    bottom: 0;
+
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-self: flex-start;
+
+    width: 230px;
+    height: 100vh;
+    padding: 0 25px;
+
+    overflow-y: auto;
+    line-height: 1.25;
+    border-right: 1px solid #e5e5e5;
+  }
+
+  .sidebar-col {
+    flex-shrink: 0;
+
+    width: 100%;
+    padding: 0;
+  }
+
+  .sidebar-col-first {
+    padding-top: 1.75rem;
+  }
+
+  .sidebar-col-last {
+    padding-bottom: 1.75rem;
+  }
+
+  .sidebar-col + .sidebar-col {
+    margin-top: 1.75em;
+  }
+
+  .sidebar-col > a {
+    display: block;
+
+    font-size: 0.8rem;
+    font-weight: bold;
+  }
+
+  .sidebar-menu {
+    padding: 0;
+    margin: 0.5em 0 0;
+
+    list-style: none;
+
+    font-size: 0.7rem;
+  }
+
+  .sidebar-menu li {
+    margin: 0;
+
+    line-height: 1.45;
+  }
+
+  .sidebar-menu a {
+    display: block;
+
+    padding: 0.25em 0;
   }
 }
 
