--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,19 @@
 
 html {
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 body {
   margin: 0;
+  min-height: 100%;
   font-size: 16px;
   line-height: 1.6;
   font-family: "Helvetica", "Arial", sans-serif;
   color: #5a5a5a;
   background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
 }
 
 a:link,
@@ -373,6 +377,7 @@ header a:visited {
 
 footer {
   padding: 2rem;
+  margin-top: auto;
   background-color: #2d2d44;
 }
 
